Windows: Fix crash during window creation (see https://crbug.com/761389)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -274,6 +274,9 @@ patches = [
   {
     # Fix white flash during browser creation.
     # https://bitbucket.org/chromiumembedded/cef/issues/1984
+    #
+    # Windows: Fix crash during window creation.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=761389
     'name': 'rwh_background_color_1984',
   },
   {
