Add ClipboardQtMapper and ClipboardQtDelegate
Change-Id: Ie37ab7ddb2e76d9d1c8ddfa600489c4fd0de5d3b

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -325,4 +325,8 @@ patches = [
     'name': 'swiftshader_729532',
     'path': 'third_party/swiftshader/',
   },
+  {
+    # Add ClipboardQtDelegate interface.
+	  'name': 'clipboard',
+  }
 ]
